# pi-health

./: Cargo.toml  README.md  build.sh
client/: Cargo.toml
client/src/: api_server.rs  health_check.rs  main.rs
src/: main.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.scss  App.tsx
ui/src/components/: AddServerDialog.module.css  AddServerDialog.tsx  ConnectionCard.module.scss  ConnectionCard.tsx  HealthGraph.tsx  RemoveConnectionAlert.tsx  Toolbar.tsx  index.tsx
ui/src/contexts/: ConnectionsContext.tsx  TickContext.tsx  index.tsx
ui/src/pages/: DashboardPage.tsx
