[package]
name = "pi-health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.3"
clap = { version = "4.4.2", features = [ "derive" ] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"
serde = { version = "1.0.185", features = [ "derive" ] } 
serde_json = "1.0.105"
simplelog = "0.12"
systemstat = "0.2"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1.1"
warp = "0.3"
